<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_inventory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:background="@drawable/shape"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inventory_header"
        android:textSize="@dimen/text_header"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/layout_inventory_collapsable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/padding_space"
                android:paddingEnd="@dimen/padding_space"
                android:text="@string/inventory_zen_silver"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:id="@+id/zen_silver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:paddingStart="@dimen/padding_space"
                android:paddingEnd="@dimen/padding_space"
                android:text="@string/inventory_hint"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:paddingStart="@dimen/padding_space"
                android:paddingEnd="@dimen/padding_space"
                android:text="@string/inventory_bomb"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:id="@+id/bomb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="@dimen/padding_space"
                android:paddingEnd="@dimen/padding_space"
                android:text="@string/inventory_shuffle"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:id="@+id/shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:paddingStart="@dimen/padding_space"
                android:paddingEnd="@dimen/padding_space"
                android:text="@string/inventory_thunder"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>

            <TextView
                android:id="@+id/thunder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>